<?xml version="1.0"?>
<package format="2">
  <name>eus_vive</name>
  <version>0.0.0</version>
  <description>The eus_vive package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>

  <license>BSD</license>

  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>baxter_core_msgs</depend>
  <depend>baxtereus</depend>
  <depend>jsk_interactive_marker</depend>
  <depend>jsk_topic_tools</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pr2eus</depend>
  <depend>roseus</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>topic_tools</depend>
  <depend>vive_ros</depend>

  <export>
  </export>

</package>
