<?xml version="1.0"?>
<package format="2">
  <name>eus_vive</name>
  <version>0.0.3</version>
  <description>The eus_vive package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxtereus</exec_depend>
  <exec_depend>influxdb_store</exec_depend>
  <exec_depend>jsk_interactive_marker</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>libuvc_camera</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pr2eus</exec_depend>
  <exec_depend>roseus</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>softhand_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>
  <exec_depend>vive_ros</exec_depend>

  <export>
  </export>

</package>
