<?xml version="1.0"?>
<package format="2">
  <name>jsk_telemanip</name>
  <version>0.0.4</version>
  <description>The jsk_telemanip package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>eus_telemanip</exec_depend>
  <exec_depend>eus_vive</exec_depend>
  <exec_depend>eus_oculus</exec_depend>
  <exec_depend>eus_spacenav</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
