<?xml version="1.0"?>
<package format="2">
  <name>jsk_telemanip_demos</name>
  <version>0.0.5</version>
  <description>The jsk_telemanip_demos package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>baxtereus</exec_depend>
  <exec_depend>eus_oculus</exec_depend>
  <exec_depend>eus_spacenav</exec_depend>
  <exec_depend>eus_vive</exec_depend>
  <exec_depend>jsk_telemanip_common</exec_depend>
  <exec_depend>pr2eus</exec_depend>
  <exec_depend>softhand_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
  </export>

</package>
